updated images & backgrounds

--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
             </div>
         </article>
     </section>
-    <section id="social" class="story"  data-speed="8" data-offsetY="50" data-type="background">
+    <section id="social" class="story"  data-speed="4" data-offsetY="270" data-type="background">
         <article>
-            <h1>social</h1>
-            <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <div id="facebook"></div>
-                <div id="tumblr"></div>
-                <div id="twitter"></div>
-                <div id="flickr"></div>
+            <h1>social media</h1>
+            <div id="socialbox">
+                <ul id="socialul">
+                    <li id="facebook" class="aspect">
+                        <p>facebook feed</p>
+                    </li>
+                    <li id="tumblr" class="aspect">
+                        <p>tumblr feed</p>
+                    </li>
+                    <li id="twitter" class="aspect">
+                        <p>twitter feed</p>
+                    </li>
+                </ul>
             </div>
         </article>
     </section>
@@ -51,10 +57,10 @@
             </div>
         </article>
     </section>
-    <section id="tickets" class="story" data-speed="4" data-offsetY="420" data-type="background">
+    <section id="tickets" class="story" data-speed="6" data-offsetY="460" data-type="background">
         <article>
             <h1>tickets</h1>
-            <div class="tix">
+            <div class="content">
                 <p>Tickets for <b>Foellinger Auditorium</b> shows available at:</p>
                 <div class="tbox">
                     <p>Assembly Hall Ticket Office</p>
