changed things around a bit

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </div>
     <section id="head" class="story" data-speed="4" data-type="background">
         <article>
-            <div class="logo" data-type="sprite" data-offsetY="40" data-Xposition="50%" data-speed="-2"></div>
+            <div class="logo" data-type="sprite" data-offsetY="80" data-Xposition="50%" data-speed="-2"></div>
             <h2 id="blurb">an <b>rso</b> dedicated to bringing <b>music</b> to campus</h2>
         </article>
     </section>
     <section id="about" class="story" data-speed="4" data-offsetY="220" data-type="background">
-        <div class="photo" data-type="sprite" data-offsetY="670" data-Xposition="82%" data-speed="2"></div>
+        <div class="photo" data-type="sprite" data-offsetY="700" data-Xposition="82%" data-speed="2"></div>
         <article>
             <h1>about</h1>
             <div class="content">
@@ -31,25 +31,31 @@
             </div>
         </article>
     </section>
-    <section id="social" class="story"  data-speed="4" data-offsetY="270" data-type="background">
+    <section id="social" class="story"  data-speed="4" data-offsetY="200" data-type="background">
         <article>
             <h1>social media</h1>
             <div id="socialbox">
                 <ul id="socialul">
                     <li id="facebook" class="aspect">
-                        <p>facebook feed</p>
+                        <a href="facebook.com">
+                        <img class="socialicon" src="img/color/facebook-square-color@2x.png"/>
+                        </a>
                     </li>
                     <li id="tumblr" class="aspect">
-                        <p>tumblr feed</p>
+                        <a href="tumblr.com">
+                        <img class="socialicon" src="img/color/tumblr-square-color@2x.png"/>
+                        </a>
                     </li>
                     <li id="twitter" class="aspect">
-                        <p>twitter feed</p>
+                        <a href="twitter.com">
+                        <img class="socialicon" src="img/color/twitter-square-color@2x.png"/>
+                        </a>
                     </li>
                 </ul>
             </div>
         </article>
     </section>
-    <section id="staff" class="story" data-speed="4" data-offsetY="480" data-type="background">
+    <section id="staff" class="story" data-speed="4" data-offsetY="440" data-type="background">
         <article>
             <h1>staff</h1>
             <div class="content">
@@ -61,7 +67,9 @@
         <article>
             <h1>tickets</h1>
             <div class="content">
+                <h2><a href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order via Ticketmaster</a></h2>
                 <p>Tickets for <b>Foellinger Auditorium</b> shows available at:</p>
+                <!--
                 <div class="tbox">
                     <p>Assembly Hall Ticket Office</p>
                     <p>1800 S. First St.</p>
@@ -73,17 +81,20 @@
                     </br>
                     No service fees apply to purchases at the box office.
                 </p>
+                -->
+                <p>Tickets for <b>Courtyard Cafe</b> shows available at:</p>
+                <!--
+                <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div>
+
                 <p>Order by Phone: (217) 333-5000</p>
                 <p class="detail">+$3.00 service fee per ticket</p>
-                <p><a href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order through Ticketmaster</a></p>
-                <p>Tickets for <b>Courtyard Cafe</b> shows available at:</p>
-                <p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union) and through Star Course personnel.</p>
+                -->
             </div>
         </article>
     </section>
-    <section id="contact" class="story" data-speed="4" data-offsetY="820" data-type="background">
+    <section id="contact" class="story" data-speed="4" data-offsetY="880" data-type="background">
         <article>
-            <h1>contact</h1>
+            <h1>mail</h1>
             <div class="content">
                 <p>
                     Mailbox 90</br>
