updated images a bit

--- a/index.html
+++ b/index.html
@@ -9,10 +9,29 @@
         <h3>
             <a href="starcour.se">///</a>
             <a id="link-about" href="#about">about</a>
-            <a id="link-social" href="#social">social</a>
             <a id="link-staff" href="#staff">staff</a>
+            <a id="link-tickets" href="#tickets">tickets</a>
             <a id="link-contact" href="#contact">contact</a>
         </h3>
+        <div id="socialul">
+        <ul>
+            <li id="facebook" class="aspect">
+                <a href="http://www.facebook.com">
+                <img class="socialicon" src="img/color/facebook-circle-color@2x.png"/>
+                </a>
+            </li>
+            <li id="tumblr" class="aspect">
+                <a href="http://www.tumblr.com">
+                <img class="socialicon" src="img/color/tumblr-circle-color@2x.png"/>
+                </a>
+            </li>
+            <li id="twitter" class="aspect">
+                <a href="http://www.twitter.com">
+                <img class="socialicon" src="img/color/twitter-circle-color@2x.png"/>
+                </a>
+            </li>
+        </ul>
+        </div>  
     </div>
     <section id="head" class="story" data-speed="4" data-type="background">
         <article>
@@ -21,37 +40,13 @@
         </article>
     </section>
     <section id="about" class="story" data-speed="4" data-offsetY="220" data-type="background">
-        <div class="photo" data-type="sprite" data-offsetY="700" data-Xposition="82%" data-speed="2"></div>
+        <div class="photo" data-type="sprite" data-offsetY="650" data-Xposition="82%" data-speed="2"></div>
         <article>
             <h1>about</h1>
             <div class="content">
                 <p>Originated in 1892, Star Course is a live-concert organization run completely by students dedicated to the promotion and production of entertainment events for both the students of the University of Illinois and the Champaign-Urbana community. These events often include bands of various genres, but Star Course has also presented orchestras, comedy acts, and a variety of talented individuals. A full list of events from Star Course’s History can be found on our History Page.</p>
 
                 <p>Nearly all the events are held at <a href="http://www.foellinger.uiuc.edu/">Foellinger Auditorium</a> at the south end of the Main Quad.</p>
-            </div>
-        </article>
-    </section>
-    <section id="social" class="story"  data-speed="4" data-offsetY="200" data-type="background">
-        <article>
-            <h1>social media</h1>
-            <div id="socialbox">
-                <ul id="socialul">
-                    <li id="facebook" class="aspect">
-                        <a href="facebook.com">
-                        <img class="socialicon" src="img/color/facebook-square-color@2x.png"/>
-                        </a>
-                    </li>
-                    <li id="tumblr" class="aspect">
-                        <a href="tumblr.com">
-                        <img class="socialicon" src="img/color/tumblr-square-color@2x.png"/>
-                        </a>
-                    </li>
-                    <li id="twitter" class="aspect">
-                        <a href="twitter.com">
-                        <img class="socialicon" src="img/color/twitter-square-color@2x.png"/>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </article>
     </section>
@@ -63,7 +58,7 @@
             </div>
         </article>
     </section>
-    <section id="tickets" class="story" data-speed="6" data-offsetY="460" data-type="background">
+    <section id="tickets" class="story" data-speed="6" data-offsetY="260" data-type="background">
         <article>
             <h1>tickets</h1>
             <div class="content">
@@ -92,11 +87,11 @@
             </div>
         </article>
     </section>
-    <section id="contact" class="story" data-speed="4" data-offsetY="880" data-type="background">
+    <section id="contact" class="story" data-speed="4" data-offsetY="900" data-type="background">
         <article>
-            <h1>mail</h1>
+            <h1 style="color:#333">mail</h1>
             <div class="content">
-                <p>
+                <p></br>
                     Mailbox 90</br>
                     280 Illini Union</br>
                     1401 W Green St, Urbana, IL 61801</br>
