updated styling a bit

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <article>
             <h1>tickets</h1>
             <div class="content">
-                <h2><a href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order via Ticketmaster</a></h2>
+                <h2><a id='tix' href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order via Ticketmaster</a></h2>
                 <p>Tickets for <b>Foellinger Auditorium</b> shows available at:</p>
                 <!--
                 <div class="tbox">
@@ -87,7 +87,7 @@
             </div>
         </article>
     </section>
-    <section id="contact" class="story" data-speed="4" data-offsetY="900" data-type="background">
+    <section id="contact" class="story" data-speed="4" data-offsetY="950" data-type="background">
         <article>
             <h1 style="color:#333">mail</h1>
             <div class="content">
