--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="nav">
         <h3>
-            <a href="starcour.se">///</a>
+            <a href="">///</a>
             <a id="link-about" href="#about">about</a>
             <a id="link-staff" href="#staff">staff</a>
             <a id="link-tickets" href="#tickets">tickets</a>
@@ -55,8 +55,8 @@
         <div class="photo" data-type="sprite" data-offsetY="650" data-Xposition="82%" data-speed="2"></div>
         <article>
             <h1>about</h1>
-            <div class="content">
-                <p>Originated in 1892, Star Course is a live-concert organization run completely by students dedicated to the promotion and production of entertainment events for both the students of the University of Illinois and the Champaign-Urbana community. These events often include bands of various genres, but Star Course has also presented orchestras, comedy acts, and a variety of talented individuals. A full list of events from Star Course’s History can be found on our History Page.</p>
+            <div class="content absolute">
+                <p>Founded in 1892, Star Course is a live-concert organization run completely by students dedicated to the promotion and production of entertainment events for both the students of the University of Illinois and the Champaign-Urbana community. These events often include bands of various genres, but Star Course has also presented orchestras, comedy acts, and a variety of talented individuals. A full list of events from Star Course’s History can be found on our <a href='http://starcourse.tumblr.com/history'>History Page.</a></p>
 
                 <p>Nearly all of the events are held at <a href="http://www.foellinger.uiuc.edu/">Foellinger Auditorium</a>, located at the south end of the Main Quad.</p>
             </div>
