rich snippets ftw

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>star course</title>
+  <title itemscope itemtype="http://schema.org/Organization" itemprop="name">star course</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <meta name="google-site-verification" content="WbYPJ5sRwlEHShdPwHQKxiDjGAen2NccXdaPblq0GHI"/>
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -48,7 +48,7 @@
     <section id="head" class="story" data-speed="4" data-type="background">
         <article>
             <div class="logo" data-type="sprite" data-offsetY="80" data-Xposition="50%" data-speed="-2"></div>
-            <h2 id="blurb">an <b>rso</b> dedicated to bringing <b>music</b> to campus</h2>
+            <h2 id="blurb" itemprop="title">an <b>rso</b> dedicated to bringing <b>music</b> to campus</h2>
         </article>
     </section>
     <section id="about" class="story" data-speed="4" data-offsetY="220" data-type="background">
@@ -100,11 +100,11 @@
         <article>
             <h1>contact</h1>
             <div class="content">
-                <p></br>
+                <p itemprop="address"></br>
                     Mailbox 90</br>
                     280 Illini Union</br>
                     1401 W Green St, Urbana, IL 61801</br>
-                    Phone: (217) 333-0457</br>
+                    <span itemprop="telephone">Phone: (217) 333-0457</span></br>
                     Fax: (217) 333-8987
                 </p>
                 <h2><a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
