--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title itemscope itemtype="http://schema.org/Organization" itemprop="name">star course</title>
+  <title itemscope itemtype="http://schema.org/Organization" itemprop="name">Star Course</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <meta name="google-site-verification" content="WbYPJ5sRwlEHShdPwHQKxiDjGAen2NccXdaPblq0GHI"/>
     <link rel="shortcut icon" href="img/favicon.ico">
