--- a/index.html
+++ b/index.html
@@ -51,22 +51,46 @@
             <h2 id="blurb" itemprop="title">an <b>rso</b> dedicated to bringing <b>music</b> to campus</h2>
         </article>
     </section>
+    <section id="smdesc" class="story" data-speed="5" data-type="background">
+        <article>
+            <h2 id='smcontent' itemprop="title">Star Course is a live-concert promotion and production organization run by students for students and the Champaign-Urbana community. Members participate in all levels of event planning – from orchestrating advertising campaigns to organizing ticket sales to staffing house and backstage positions on the day-of-show. Star Course is about diversity in music, creativity in learning and friendship in community.</h2>
+        </article>
+    </section>
     <section id="about" class="story" data-speed="4" data-offsetY="220" data-type="background">
         <div class="photo" data-type="sprite" data-offsetY="650" data-Xposition="82%" data-speed="2"></div>
         <article>
             <h1>about</h1>
-            <div class="content absolute">
-                <p>Founded in 1892, Star Course is a live-concert organization run completely by students dedicated to the promotion and production of entertainment events for both the students of the University of Illinois and the Champaign-Urbana community. These events often include bands of various genres, but Star Course has also presented orchestras, comedy acts, and a variety of talented individuals. A full list of events from Star Course’s History can be found on our <a href='http://starcourse.tumblr.com/history'>History Page.</a></p>
-
-                <p>Nearly all of the events are held at <a href="http://www.foellinger.uiuc.edu/">Foellinger Auditorium</a>, located at the south end of the Main Quad.</p>
+            <div class="content right">
+                <p class='aboutdet'><b>History.</b> Star Course is the University’s oldest student-run organization dating back to 1892. Designed to contract, promote and stage campus entertainment, Star Course brought its first orchestra to the University in 1912. Throughout the past century the organization has broadened its scope to jazz, big band, rock, comedy, R&amp;B, hip-hop and soul acts. Today Star Course focuses on providing a diverse selection of popular entertainment to the University and C-U community. </p>
+                <p class='aboutdet'><b>Organization.</b> Star Course is a non-profit, student-operated organization under the advisory of Assembly Hall. As a university talent-buying group, Star Course is remarkably independent. While many schools have small entertainment boards comprised of both faculty and students, Star Course is all students – top to bottom. </p>
+                <p class='aboutdet'><b>Leadership.</b> Each year, Star Course selects 2 student Senior Managers and 14 Junior Managers to lead staff through the promotion and production process. Senior Managers contract an average of 3 to 4 shows per semester, and Junior Managers direct staff through each phase of show preparation. </p>
+                <p class='aboutdet'><b>Experience.</b> Members have the opportunity to participate on multiple committees both day of show and non-day of show. Opportunities include: Ad Design, Ad Media, Business Administration, Hospitality, Marketing, Personnel, Public Relations, Publicity, Social Media, Stage &amp; Production, and Tickets.  Allowing members to contribute to several committees, non day-of-show committees are loosely grouped into three cooperative divisions: Advertising, External Relations and Internal Relations. The committees in each division work together to share ideas and support one another in their efforts. </p>
+                <p class='aboutdet'><b>Community.</b> Star Course is about building a community of friends around music and sharing working, learning and social experiences. Members come into contact with hundreds of new people and are exposed to new types of music. Frequent shows, meetings and member events give staff the opportunity build friendships and share experiences. </p>
+                <p class='aboutdet'><b>Commitment.</b> Staff members should be prepared for all-staff meetings, committee meetings, and regular member events. Show dates vary throughout the semester, and time commitment varies with the climate of the concert industry. Due to the short-term, fast-paced nature of the industry, staff should be prepared to be on-call and ready for action throughout the semester. </p>
+                <p class='aboutdet'><b>Action.</b> Star Course accepts new members at the beginning of each Fall and Spring Semester. Managers are looking for new members who are interested in learning about the concert industry and willing to make the necessary time commitment, or simply love music. The application process is informal in manner but significant in purpose. Email starcoursepersonnel@gmail.com to apply. </p>
             </div>
         </article>
     </section>
-    <section id="staff" class="story" data-speed="4" data-offsetY="200" data-type="background">
+    <section id="staff" class="story tall" data-speed="4" data-offsetY="200" data-type="background">
         <article>
-            <h1>staff</h1>
+            <h1>organization</h1>
             <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2 style='font-size:36px;'>Star Course Committees and Divisions</h2>
+                <p>Members are required to join one non-day of show and one day of show.</p>
+                <p>All members will join Public Relations or Publicity for a non-day of show committee with the option of participating in Ad Design, Ad Media, Marketing, Personnel, or Social Media. </p>
+                <h2>Non-Day of Show Committees</h2>
+                <p>Ad Design: Creates print and radio advertisements for upcoming shows. Designs content and layout of the star course web site. </p>
+                <p>Ad Media: Places ads with newspapers and radio stations and organizes ticket giveaway promotions. Coordinates media-artist relations. </p>
+                <p>Marketing: Oversees group marketing efforts. Coordinates and executes marketing plan. </p>
+                <p>Personnel: Manages staff roster, plans member events, and organizes internal communication.</p>
+                <p>Public Relations: Organizes contests and other live on-campus promotions. Works with University and community organizations and businesses to promote shows and gain sponsorship.</p>
+                <p>Publicity: Distributes advertising materials to the community. Designs displays and other types of artistic promotions. </p>
+                <p>Social Media: All things social media. Manages online presence and online marketing.  Social media sites include: Facebook, Twitter, Tumblr, Instagram, Pinterest </p>
+                <h2>Day of Show Committees</h2>
+                <p>Business Administration: Handles account payments and  finances. Directs fundraising and sponsorship for the organization. Sells band merchandise on the day of show.</p>
+                <p>Hospitality: Maintains office hours and supplies. Coordinates all catering and hospitality efforts on the day of show.</p>
+                <p>Stage &amp; Production: Staffs backstage, production hand, security, and ushering positions.</p>
+                <p>Tickets: Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show.</p>
             </div>
         </article>
     </section>
@@ -99,7 +123,7 @@
     <section id="contact" class="story" data-speed="4" data-offsetY="950" data-type="background">
         <article>
             <h1>contact</h1>
-            <div class="content">
+            <div class="content upper">
                 <p itemprop="address"></br>
                     Mailbox 90</br>
                     280 Illini Union</br>
