--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <section id="smdesc" class="story" data-speed="5" data-type="background">
         <article>
-            <h2 id='smcontent' itemprop="title">Star Course is a live-concert promotion and production organization run by students for students and the Champaign-Urbana community. Members participate in all levels of event planning – from orchestrating advertising campaigns to organizing ticket sales to staffing house and backstage positions on the day-of-show. Star Course is about diversity in music, creativity in learning and friendship in community.</h2>
+            <h2 id='smcontent' itemprop="title">Star Course is a live-concert promotion and production organization run by students for fellow students and the Champaign-Urbana community. Members participate in all levels of event planning – from orchestrating advertising campaigns to organizing ticket sales to staffing house and backstage positions on the day-of-show. Star Course is about diversity in music, creativity in learning and friendship in community.</h2>
         </article>
     </section>
     <section id="about" class="story" data-speed="4" data-offsetY="220" data-type="background">
