--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <meta name="google-site-verification" content="WbYPJ5sRwlEHShdPwHQKxiDjGAen2NccXdaPblq0GHI"/>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel='stylesheet' type='text/css' href='css/styles.scss'/>
+    <link rel='stylesheet' type='text/css' href='css/styles.css'/>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
