--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a id="link-staff" href="#staff">staff</a>
             <a id="link-tickets" href="#tickets">tickets</a>
             <a id="link-contact" href="#contact">contact</a>
+            <a style='padding-left:50px;'>Just announced: Casey James and Kasey Musgraves scheduled for October</a>
         </h3>
         <div id="socialul">
             <ul>
