--- a/index.html
+++ b/index.html
@@ -13,21 +13,15 @@
     ga('create', 'UA-40008117-4', 'star-course.com');
     ga('send', 'pageview');
     </script>
-    <script type="text/javascript">
-    if (screen.width <= 699) {
-      document.location = "mobile.html";
-    }
-    </script>
 </head>
 <body>
     <div id="nav">
-        <h3>
+        <h3 id='navcontent'>
             <a href="">///</a>
             <a id="link-about" href="#about">about</a>
             <a id="link-staff" href="#staff">staff</a>
             <a id="link-tickets" href="#tickets">tickets</a>
             <a id="link-contact" href="#contact">contact</a>
-            <a style='padding-left:50px;'>Just announced: Casey James and Kasey Musgraves scheduled for October</a>
         </h3>
         <div id="socialul">
             <ul>
@@ -108,9 +102,10 @@
             </div>
         </article>
     </section>
-    <section id="tickets" class="story" data-speed="6" data-offsetY="460" data-type="background">
+    <section id="tickets" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
         <article>
-            <h1 class='panetitle'>tickets</h1>
+            <h1 class='panetitle'>upcoming</h1>
+            <a id='cta'>Just announced: <b>Casey James</b> and <b>Kasey Musgraves</b> scheduled for October shows<p>More info to come.</p></a>
             <div class="content">
                 <h2><a id='tix' href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order via Ticketmaster</a></h2>
                 <p>Order by Phone: (217) 333-5000</p>
