--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </li>
             </ul>
         </div>  
-        <img id='badge' src="img/badge.png"/>
+        <!-- <img id='badge' src="img/badge.png"/> -->
     </div>
     <section id="head" class="story" data-speed="4" data-type="background">
         <article>
