--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,1 @@
-<script>window.location = "http://www.star-course.com/#about";</script>
+<script>window.location = "http://www.star-course.com/#contact";</script>
