--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             </div>
         </article>
     </section>
-    <section id="tickets" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
+    <section id="events" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
         <article>
-            <h1 class='panetitle'>upcoming</h1>
+            <h1 class='panetitle'>events</h1>
             <a id='cta'>Just announced: <b>Casey James</b> and <b>Kasey Musgraves</b> scheduled for October shows<p>More info to come.</p></a>
             <div class="content">
                 <h2><a id='tix' href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order via Ticketmaster</a></h2>
