--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="">///</a>
             <a id="link-about" href="#about">about</a>
             <a id="link-staff" href="#staff">staff</a>
-            <a id="link-tickets" href="#tickets">tickets</a>
+            <a id="link-events" href="#events">events</a>
             <a id="link-contact" href="#contact">contact</a>
         </h3>
         <div id="socialul">
@@ -107,7 +107,6 @@
             <h1 class='panetitle'>events</h1>
             <a id='cta'>Just announced: <b>Casey James</b> and <b>Kasey Musgraves</b> scheduled for October shows<p>More info to come.</p></a>
             <div class="content">
-                <h2><a id='tix' href="http://www.ticketmaster.com/University-of-Illinois-Foellinger-Auditorium-tickets-Urbana/venue/57782">Order via Ticketmaster</a></h2>
                 <p>Order by Phone: (217) 333-5000</p>
                 <p>Tickets for <b>Foellinger Auditorium</b> shows:</p>
                 
