--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="cta">
-        <h2 id="banner">Just announced: <b>Casey James</b> and <b>Kacey Musgraves</b> for October shows!</h2>
+        <h5 id="banner">Just announced: <b>Casey James</b> and <b>Kacey Musgraves</b> for October shows!</h5>
     </div>
     <div id="nav">
         <h3 id='navcontent'>
@@ -117,6 +117,8 @@
                 <b>On Sale:</b> 9/4 @ 9am<br>
             </a>
             <div class="content">
+                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>General Ticket Info</a><p id='phone'>Order by Phone: (866) ILLINI-1</p>
+                <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
                 
                 <div class="tbox">
@@ -128,8 +130,6 @@
                 </div>
                 <h2>Tickets for <b>Courtyard Cafe</b> shows:</h2>
                 <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div>
-
-                <p>Order by Phone: (217) 333-5000</p>
             </div>
         </article>
     </section>
@@ -156,7 +156,7 @@
       $(".aboutdet").fitText(4);
       $(".panetitle").fitText(0.5, { minFontSize: '20px', maxFontSize: '68px' });
       $(".wide").fitText(4);
-      $("#banner").fitText(2);
+      $("#cta").fitText(3, { minFontSize: '24px' });
     </script>
     <script src="js/scroll.js"></script>
 </body>
