updates top bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="cta">
-        <h5 id="banner">Just announced: <b>Casey James</b> and <b>Kacey Musgraves</b> for October shows!</h5>
+        <h5 id="banner">Just announced: <b>Casey James</b> - <a href='#events'>Tickets on sale 9/3</a></h5>
     </div>
     <div id="nav">
         <h3 id='navcontent'>
